base/laravel/laravel-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: laravel-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: laravel
  ports:
    - port: 80
      targetPort: 80
